# settings-schema-rs

./: Cargo.toml  README.md
settings-schema/: Cargo.toml
settings-schema-derive/: Cargo.toml
settings-schema-derive/src/: higher_order.rs  lib.rs  ty.rs
settings-schema/examples/: example.rs  example1.rs  example2.rs
settings-schema/src/: lib.rs
