[package]
name = "settings-schema-derive"
description = "Serialize structs and enums with gui metadata"
version = "0.0.1+alvr"
authors = ["Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.58"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = "1"
quote = "1"
heck = "0.3"