[package]
name = "settings-schema-derive"
description = "proc-macro crate for settings-schema"
repository = "https://github.com/zarik5/settings-schema-rs"
readme = "../README.md"
version = "0.2.0"
authors = ["Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
categories = ["config", "data-structures", "gui"]
keywords = ["settings", "schema"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = "2"
