[package]
name = "settings-schema"
description = "Derive macro for structs and enums GUI metadata"
repository = "https://github.com/zarik5/settings-schema-rs"
readme = "../README.md"
version = "0.2.0"
authors = ["Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
categories = ["config", "data-structures", "gui"]
keywords = ["settings", "schema"]
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
settings-schema-derive = { version = "0.2.0", path = "../settings-schema-derive" }

[[example]]
name = "example"
